# poof

./: .gitignore  BUILDME.md  CONTRIBUTORS.md  LICENSE  LICENSE.txt  Makefile  README.md  SECRETS.md  build.mk  package.txt  poof.1.md  pyproject.toml  requirements.txt  restoreconf  setup.py
Reddit-posts/: Reddit-DataHoarder.md  Reddit-Privacy.md  r_Privacy-details.md
assets/: BUILDME.graffle  backup-continuum.graffle  use-cases.graffle
docs/: README.md  index.md  op-considerations.md  poof.1  use-cases.md
homebrew/: prepresources
ops-docs/: index.md
poof/: __init__.py  clitest.py  launchd.py  nukedir.py  v2.py
schedulers/: org.pypi.poof.plist
tests/: __init__.py  launchd-test.py  nukedir-test.py  poof-test.py  pytest.ini  test-launchd.py  test-poof.py  test_poof.py
