[tool.poetry]
authors = ["pr3d4t0r <poof.project@cime.net>"]
description = ""
license = "BSD-3-Clause"
name = "poof"
version = "1.0.0"
repository = "https://github.com/pr3d4t0r/poof"

[tool.poetry.dependencies]
python = "3.8.5"
pyflakes = "^2.2.0"
pudb = "^2019.2"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
