[tool.poetry]
authors = ["pr3d4t0r <poof.project@cime.net>"]
description = ""
license = "BSD-3-Clause"
name = "poof"
version = "1.0.0"
repository = "https://github.com/pr3d4t0r/poof"

[tool.poetry.dependencies]
python = "3.8.5"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
pudb = "^2019.2"
pyflakes = "^2.2.0"
pytest = "^6.0"
pytest-mock = "^3.3.1"

[tool.poetry.scripts]
poof = 'poof:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
